# Fullstack-Notes-Template

./: LICENSE  README.md
backend/: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dev.py  notes.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8e069566f790_re_create_notes_table.py
backend/app/: database.py  main.py
backend/app/constants/: chat_context.py
backend/app/models/: __init__.py  note.py
backend/app/routers/: __init__.py  chat.py  notes.py
backend/app/schemas/: __init__.py  chat.py  note.py
backend/app/utils/: chat.py
backend/docs/adr/: 001-python-tooling.md  002-database-migration-tool.md  README.md
frontend/: biome.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/notes/: page.tsx
frontend/apps/web/: biome.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/components/chat/: ContextAwareEditor.tsx  MentionList.tsx  suggestion.ts  type.ts
frontend/components/notes/: LexicalMdEditor.tsx  TipTapEditor.tsx
frontend/config/lexical/: theme.ts
frontend/context/: NotesProvider.tsx
frontend/docs/adr/: 001-server-state-management.md  002-typesafe-api-client-generation.md  003-package-manager.md  004-standard-ui-components.md  005-markdown-editor.md  006-client-side-storage.md  (+1 more)
frontend/hooks/: useNote.ts
frontend/nodes/: MentionNode.tsx
frontend/plugins/: MentionPlugin.tsx  TreeViewPlugin.tsx
frontend/styles/: global.css  lexical.css
frontend/types/: note.ts  schema.d.ts
(+29 files in other folders)
